[gd_scene load_steps=10 format=2]

[ext_resource path="res://asset/sprite/enemy.png" type="Texture" id=1]
[ext_resource path="res://asset/script/unit.gd" type="Script" id=2]
[ext_resource path="res://asset/animation/character_walking.tres" type="Animation" id=3]
[ext_resource path="res://asset/animation/character_idle.tres" type="Animation" id=4]
[ext_resource path="res://asset/sprite/hp.png" type="Texture" id=5]
[ext_resource path="res://asset/sprite/hp_empty.png" type="Texture" id=6]
[ext_resource path="res://asset/animation/character_attack.tres" type="Animation" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 24.0

[sub_resource type="CircleShape2D" id=2]
radius = 304.0

[node name="unit" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="collision_shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 0, 2.26703 )
texture = ExtResource( 1 )

[node name="detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2( 8, 0 )
shape = SubResource( 2 )

[node name="animation" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/character_attack = ExtResource( 7 )
anims/character_idle = ExtResource( 4 )
anims/character_walking = ExtResource( 3 )

[node name="attack_delay" type="Timer" parent="."]
one_shot = true

[node name="timer_reset_target" type="Timer" parent="."]
autostart = true

[node name="hit_point" type="TextureProgress" parent="."]
margin_left = -32.0
margin_top = -64.0
margin_right = 32.0
margin_bottom = -56.0
size_flags_horizontal = 3
size_flags_vertical = 0
value = 100.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="timer_reset_target" to="." method="_on_timer_reset_target_timeout"]
